[project]
name = "jwt-cracker"
version = "1.0.0"
description = "A Python tool for cracking JWT HS256 signature keys using dictionary attacks and brute force methods"
authors = [{name = "JWT Cracker Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyJWT>=2.8.0",
]

[project.scripts]
jwt-cracker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]